[tool.poetry]
name = "grpc-demo-py"
version = "0.1.0"
description = ""
authors = ["Matt Goodall <matt.goodall@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.43.0"
grpcio-reflection = "^1.43.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
